tests/src/frontend/syntax/invalid/macro_global_typeid.sk
base class B {
  macro fun m(): void {
    _ = (0: .#ThisClass);
  }

  static fun f(): void {
    void
  }
}

fun main(): void {
  print_string("FAIL");
}
